--- a/src/style.css
+++ b/src/style.css
@@ -116,6 +116,14 @@
     border-radius: 1em;
 }
 
+.warning {
+    background-color: #b0b0b0;
+    border: 2px solid yellow;
+    margin: 1em;
+    padding: 1em;
+    border-radius: 1em;
+}
+
 .info {
     background-color: #d0d0f0;
     border: 2px solid blue;
@@ -124,9 +132,9 @@
     border-radius: 1em;
 }
 
-.warning {
-    background-color: #b0b0b0;
-    border: 2px solid yellow;
+.doc {
+    background-color: white;
+    border: 2px solid black;
     margin: 1em;
     padding: 1em;
     border-radius: 1em;
