--- a/src/base.css
+++ b/src/base.css
@@ -20,15 +20,31 @@
     --mathjslab-c-text-dark-1: var(--mathjslab-c-white);
     --mathjslab-c-text-dark-2: hsla(0, 0%, 92%, 0.64);
 
+    --mathjslab-c-panel-box-shadow-light: hsl(113, 49%, 30%);
+    --mathjslab-c-panel-box-shadow-dark: hsl(113, 49%, 30%);
+
+    --mathjslab-c-button-text-light: hsl(0, 0%, 100%);
+    --mathjslab-c-button-border-light: hsl(120, 100%, 25%);
+    --mathjslab-c-button-backgroung-to-light: hsl(120, 26%, 53%);
+    --mathjslab-c-button-backgroung-from-light: hsl(113, 30%, 43%);
+    --mathjslab-c-button-box-shadow-light: hsl(113, 49%, 30%);
+    --mathjslab-c-button-text-shadow-light: hsl(113, 49%, 30%);
+    --mathjslab-c-button-text-dark: hsl(0, 0%, 100%);
+    --mathjslab-c-button-border-dark: hsl(120, 100%, 25%);
+    --mathjslab-c-button-backgroung-to-dark: hsl(120, 26%, 43%);
+    --mathjslab-c-button-backgroung-from-dark: hsl(113, 30%, 33%);
+    --mathjslab-c-button-box-shadow-dark: hsl(113, 49%, 20%);
+    --mathjslab-c-button-text-shadow-dark: hsl(113, 49%, 20%);
+
     --mathjslab-c-pre-code-background-light: hsl(0, 0%, 90%);
     --mathjslab-c-pre-code-background-dark: hsl(0, 0%, 20%);
 
-    --mathjslab-c-a-light: hsla(160, 100%, 37%, 1);
-    --mathjslab-c-a-hover-light: hsla(160, 100%, 23%, 1);
-    --mathjslab-c-a-dark: hsla(160, 100%, 37%, 1);
-    --mathjslab-c-a-hover-dark: hsla(160, 100%, 23%, 1);
-    --mathjslab-c-a-background-hover-light: hsla(160, 100%, 37%, 0.2);
-    --mathjslab-c-a-background-hover-dark: hsla(160, 100%, 37%, 0.2);
+    --mathjslab-c-a-light: hsla(120, 100%, 37%, 1);
+    --mathjslab-c-a-hover-light: hsla(120, 100%, 23%, 1);
+    --mathjslab-c-a-dark: hsla(120, 100%, 37%, 1);
+    --mathjslab-c-a-hover-dark: hsla(120, 100%, 23%, 1);
+    --mathjslab-c-a-background-hover-light: hsla(120, 100%, 37%, 0.2);
+    --mathjslab-c-a-background-hover-dark: hsla(120, 100%, 37%, 0.2);
 
     --mathjslab-c-input-background-light: hsl(120, 35%, 91%);
     --mathjslab-c-input-background-dark: hsl(120, 35%, 91%);
@@ -88,6 +104,15 @@
     --color-heading: var(--mathjslab-c-text-light-1);
     --color-text: var(--mathjslab-c-text-light-1);
 
+    --color-panel-box-shadow: var(--mathjslab-c-panel-box-shadow-light);
+
+    --color-button-text: var(--mathjslab-c-button-text-light);
+    --color-button-border: var(--mathjslab-c-button-border-light);
+    --color-button-backgroung-to: var(--mathjslab-c-button-backgroung-to-light);
+    --color-button-backgroung-from: var(--mathjslab-c-button-backgroung-from-light);
+    --color-button-box-shadow: var(--mathjslab-c-button-box-shadow-light);
+    --color-button-text-shadow: var(--mathjslab-c-button-text-shadow-light);
+
     --color-pre-code-background: var(--mathjslab-c-pre-code-background-light);
 
     --color-a-text: var(--mathjslab-c-a-light);
@@ -129,6 +154,14 @@
 
         --color-heading: var(--mathjslab-c-text-dark-1);
         --color-text: var(--mathjslab-c-text-dark-2);
+
+        --color-panel-box-shadow: var(--mathjslab-c-panel-box-shadow-dark);
+
+        --color-button-text-shadow: var(--mathjslab-c-button-text-shadow-dark);
+        --color-button-border: var(--mathjslab-c-button-border-dark);
+        --color-button-backgroung-to: var(--mathjslab-c-button-backgroung-to-dark);
+        --color-button-backgroung-from: var(--mathjslab-c-button-backgroung-from-dark);
+        --color-button-box-shadow: var(--mathjslab-c-button-box-shadow-dark);
 
         --color-pre-code-background: var(--mathjslab-c-pre-code-background-dark);
 
