--- a/src/main.css
+++ b/src/main.css
@@ -15,9 +15,32 @@ a,
     padding: 3px;
 }
 
-button {
-    padding: 0.5em;
+select, button {
     margin: 0.5em;
+	box-shadow: 0px 10px 14px -7px var(--color-button-box-shadow);
+	background: linear-gradient(to bottom, var(--color-button-backgroung-to) 5%, var(--color-button-backgroung-from) 100%);
+	background-color: var(--color-button-backgroung-to);
+    border: 1px outset var(--color-button-border);
+	border-radius: 0.5em;
+	display:inline-block;
+	cursor:pointer;
+	color:var(--color-button-text);
+	font-family:Arial;
+	font-size: 1rem;
+	font-weight: bold;
+	padding: 0.5em;
+	text-decoration:none;
+	text-shadow:0px 1px 0px var(--color-button-text-shadow);
+}
+
+select:hover, button:hover {
+	background:linear-gradient(to bottom, var(--color-button-backgroung-from) 5%, var(--color-button-backgroung-to) 100%);
+	background-color:var(--color-button-backgroung-from);
+}
+
+select:active, button:active {
+	position:relative;
+	top:1px;
 }
 
 @media (hover: hover) {
@@ -68,6 +91,7 @@ h3 {
     background-color: var(--green-backgroung);
     border: 2px solid var(--green-border);
     border-radius: 1em;
+    box-shadow: 0px 10px 14px -7px var(--color-panel-box-shadow);
     padding: 1em;
 }
 
@@ -178,12 +202,13 @@ code {
     background-color: var(--color-input-background);
     color: var(--color-input-text);
     font-family: monospace;
-    font-size: 1.225em;
+    font-size: 1.225rem;
     border: 1px thin black;
-    overflow-x: auto;
     padding: 0.2em;
-    line-height: 1.225em;
+    line-height: 1.225rem;
     white-space: pre-wrap;
+    overflow-wrap: normal;
+    overflow-x: auto;
     width: 100%;
     resize: none;
 }
@@ -214,7 +239,7 @@ code {
     white-space: nowrap;
     height: 1em;
     width: 100%;
-    line-height: 1em;
+    line-height: 1rem;
     border-radius: 0.3em;
     border: 0;
     box-shadow: 0 0 0 0;
@@ -288,6 +313,8 @@ canvas {
 
 .wrap-collabsible {
     margin-bottom: 1.2rem 0;
+    box-shadow: 0px 10px 14px -7px var(--color-panel-box-shadow);
+    border-radius: 1em;
 }
 
 input.toggle {
@@ -341,7 +368,7 @@ input.toggle {
 
     border-bottom-left-radius: 1em;
     border-bottom-right-radius: 1em;
-    padding: .5rem 1rem;
+    padding: 0.5em;
 }
 
 .collapsible-content {
