--- a/src/main.css
+++ b/src/main.css
@@ -139,6 +139,7 @@ mn > pre {
     background-color: inherit;
     padding: 0;
     margin: 0;
+    border-radius: 0;
 }
 
 pre > code {
@@ -306,12 +307,6 @@ button.inputbutton {
     margin: 1rem;
     padding: 1rem;
     border-radius: 1rem;
-}
-
-canvas {
-    display: block;
-    width: 100%;
-    height: 100%;
 }
 
 .wrap-collabsible {
